--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "3.5",
+    "axios": "^0.19.0",
     "babel-preset-react": "^6.24.1",
+    "bootstrap": "^4.4.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.0",
     "prop-types": "^15.6.2",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "vue": "^2.6.10",
+    "vue-loader": "14.2.2",
+    "vue-template-compiler": "^2.6.10",
+    "vue-turbolinks": "^2.0.4"
   },
   "devDependencies": {
     "webpack-dev-server": "3.1.11"
